react-app/src/stylesheets/Page.scss
@import './_variables.scss';

.page {
  height: calc(100vh - 56px);
  padding-top: 56px;
}

.page-content {
  height: calc(100vh - 56px - 58px); // navbar - h1 height
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-top: 20px;
}

.page-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: 100%;
  justify-content: space-between;
}

.flex-space-between-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: 100%;
  justify-content: space-between;
}

.flex-start-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: 100%;
  justify-content: flex-start;
}

.flex-end-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: 100%;
  justify-content: flex-end;
}

.form-container {
  padding-left: 20px;
  padding-right: 20px;
  max-width: 100%;
  overflow-y: auto;
}

.row {
  flex-wrap: nowrap;
}
.col-xl-3,
.col-lg-3,
.col-md-3,
.col-sm-3,
.col-3 {
  padding-left: 0px;
  padding-right: 0px;
}

.page-title {
  color: $primary;
  box-shadow: 0px 2px 4px 0px $lighter-accent;
  font-family: 'Courier New', 'Monaco', monospace;
  padding: 5px;
  margin: 0px;
  text-align: center;
}

.page-subtitle {
  color: $primary;
  font-family: 'Courier New', 'Monaco', monospace;
  background-color: $lighter-accent;
  text-align: center;
}

.page-text {
  color: $dark-shade;
  padding-top: 20px;
}

.emphasized-list-text {
  color: $secondary;
  font-weight: bold;
}

.form-header-text {
  font-size: 30px;
  margin-bottom: 10px;
  margin-top: 20px;
}

.form-subheader-text {
  color: $secondary;
  font-size: 20px;
  margin-top: 20px;
  font-weight: bold;
}

.text-centered {
  text-align: center;
}

.padding-100 {
  padding-top: 100px;
}

.generic-button {
  font-family: 'Courier New', 'Monaco', monospace;
  font-size: 14px;
  margin-bottom: 10px;
  margin-top: 10px;
}

.nav-button-container {
  display: flex;
  justify-content: space-between;
  padding-left: 10px;
  padding-right: 10px;
  box-shadow: 0px -2px 4px 0px $lighter-accent;
  z-index: 1;
}

.button-container {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.vertical-menu-button {
  font-family: 'Courier New', 'Monaco', monospace;
  font-size: 16px;
  margin-bottom: 20px;
  text-align: center;
  text-decoration: none;
  width: 300px;
}

.file-picker-box {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  margin-bottom: 20px;
  vertical-align: center;
}

.file-button-container {
  display: flex;
  justify-content: space-betweeen;
}

.narrow-button {
  font-size: 14px;
  margin-bottom: 0px;
  margin-right: 20px;
  margin-top: 0px;
}

.form-button-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin-bottom: 30px;
  margin-top: 20px;
}
.form-button {
  font-family: 'Courier New', 'Monaco', monospace;
}

.file-name {
  color: $secondary;
  font-weight: bold;
  text-align: right;
}

.input-width-limit {
  margin-right: 0px;
  max-width: 300px;
}
.arg-input-width-limit {
  margin-right: 0px;
  max-width: 95%;
}

.label-and-icon-container {
  display: flex;
  justify-content: space-between;
  width: 95%;
}

.mouse-pointer {
  cursor: pointer;
}

.navbar {
  background: $dark-shade;
}

.navbar-brand {
  font-family: 'Courier New', 'Monaco', monospace;
}

